<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:divider="?android:attr/listDivider"
    android:orientation="vertical"
    android:showDividers="middle">

    <LinearLayout
        android:id="@+id/download_header"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:divider="?android:attr/listDivider"
        android:dividerPadding="14dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:showDividers="middle">

        <LinearLayout
            android:id="@+id/download_operation"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center">

            <ImageView
                android:id="@+id/download_operation_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/list_icon_pause" />

            <TextView
                android:id="@+id/download_operation_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="3dp"
                android:text="@string/download_pause_all"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/download_clear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center">

            <ImageView
                android:id="@+id/download_clear_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/list_icon_delete" />

            <TextView
                android:id="@+id/download_clear_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="3dp"
                android:text="@string/download_clear"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="15sp" />
        </LinearLayout>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/download_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never" />

    <TextView
        android:id="@+id/download_hint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/download_no_tasks"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="16sp"
        android:visibility="gone" />

</LinearLayout>