<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:divider="?android:attr/listDivider"
    android:orientation="vertical"
    android:showDividers="middle">

    <LinearLayout
        android:id="@+id/download_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tab_height"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/download_summary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="15dp"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/download_manager"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:padding="15dp"
            android:src="@drawable/list_icon_manager" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/download_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:overScrollMode="never" />

    <LinearLayout
        android:id="@+id/download_footer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tab_height"
        android:background="@android:color/white"
        android:divider="?android:attr/listDivider"
        android:dividerPadding="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:showDividers="middle"
        android:visibility="gone">

        <TextView
            android:id="@+id/download_select"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:drawablePadding="-8dp"
            android:drawableTop="@drawable/list_icon_select"
            android:gravity="center"
            android:paddingTop="3dp"
            android:text="@string/label_select_all"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/download_delete"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:drawablePadding="-8dp"
            android:drawableTop="@drawable/list_icon_delete"
            android:gravity="center"
            android:paddingTop="3dp"
            android:text="@string/download_delete"
            android:textSize="12sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/download_hint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/download_no_resources"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="16sp"
        android:visibility="gone" />
</LinearLayout>