<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eee"
    android:orientation="vertical"
    tools:context=".activity.SingleImageActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="#028aff"
        android:gravity="center|left"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <ImageView
            android:id="@+id/face_image_back"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_margin="10dp"
            android:onClick="back"
            android:src="@drawable/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/activity_image_process"
            android:textColor="#fff"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/face_image_choose_local_image"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_margin="10dp"
            android:onClick="chooseLocalImage"
            android:src="@drawable/picture" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbarStyle="@null">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_show"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:maxHeight="400dp"
                android:minWidth="100dp"
                android:minHeight="100dp" />


            <com.hg.ui.view.RoundLinearlayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="40dp"
                android:orientation="vertical"
                android:padding="10dp"
                app:roundRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@drawable/about"
                            android:tint="#F44336" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_weight="1"
                            android:text="@string/image_info_find"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <ImageView
                            android:id="@+id/face_image_find_info_more"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@drawable/more_up"
                            android:tint="#B3B3B3" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/face_image_find_info_layout"
                        android:layout_width="match_parent"
                        android:orientation="vertical"
                        android:layout_height="wrap_content">

                        <include layout="@layout/face_image_find_none" android:id="@+id/find_none" />

                        <include layout="@layout/face_image_find_info" android:id="@+id/find_info" android:visibility="gone"/>

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="#eee"></LinearLayout>

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@drawable/about"
                            android:tint="#4CAF50" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_weight="1"
                            android:text="@string/image_info"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <ImageView
                            android:id="@+id/face_image_info_more"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@drawable/more_up"
                            android:tint="#B3B3B3" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/face_image_info_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp">

                        <TextView
                            android:id="@+id/tv_notice"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </LinearLayout>
                </LinearLayout>


            </com.hg.ui.view.RoundLinearlayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>